<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.userManagements.userRegistration"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/hospital"
        android:layout_marginBottom="25dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="25dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:hint="@string/enter_name"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="25dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:hint="@string/e_mail_id"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="25dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:hint="@string/contact_number"
                android:maxLines="1"
                android:maxLength="13"
                android:inputType="number"/>

            <EditText
                android:id="@+id/date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="25dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:hint="@string/date_of_birth"
                android:maxLines="1"
                android:maxLength="10"
                android:inputType="date"
                android:focusable="false"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="25dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_box"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="25dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"/>

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>